--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,3 +1,15 @@
-h1 {
+html {
+    overflow:hidden;
+}
+body {
+    width: 100%;
+    background-image: url(../img/background.png);
+    background-size: cover;
+    background-attachment: fixed;
     font-family: 'Academy Engraved LET', sans-serif;
+    font-size: 30%;
+}
+div {
+    
+    
 }
