--- a/assets/css/bulma.css
+++ b/assets/css/bulma.css
@@ -5042,7 +5042,7 @@ a.dropdown-item.is-active, button.dropdown-item.is-active {
   flex-direction: column;
   max-height: calc(100vh - 40px);
   overflow: hidden;
-  -ms-overflow-y: visible;
+  overflow-y: visible;
 }
 
 .modal-card-head, .modal-card-foot {
