--- a/assets/public/index.css
+++ b/assets/public/index.css
@@ -4,7 +4,7 @@
 }
 
 #top .hero-body {
-  background-image: url('../img/background.png');
+  background-image: url("../img/background.png");
   background-size: cover;
 }
 
@@ -18,19 +18,22 @@
 
 #top .footer {
   background-color: #fafafa;
-  padding: 1.0rem;
+  padding: 1rem;
 }
 
-@media screen and (max-width:768px) {
+@media screen and (max-width: 768px) {
   #top .title {
     font-size: 4em;
   }
   #top .subtitle {
     font-size: 1.5em;
   }
+  .modal-content, .modal-card {
+    width: 90%;
+  }
 }
 
-@media screen and (max-width:375px) {
+@media screen and (max-width: 375px) {
   #top .title {
     font-size: 3em;
   }
