--- a/assets/public/auth.css
+++ b/assets/public/auth.css
@@ -1,10 +1,14 @@
 html, body {
-    height: 100%;
     overflow: hidden;
 }
 
 input:not(input[type="button"]) {
-    background-color: transparent!important;
+    background-color: transparent;
+}
+
+input::placeholder {
+    color: gray!important;
+    font-size: 16px;
 }
 
 input::placeholder {
@@ -12,18 +16,16 @@ input::placeholder {
     font-size: 10px;
 }
 
-input:not(input[type="button"]) {
-    color: white !important;
-    ;
-}
-
-._is-centered {
-    margin: 24vh 30px;
-}
-
-@media screen and (min-width: 769px) {
-    ._is-centered {
-        margin: 24vh auto;
-        width: 696px;
+@media screen and (min-width: 1024px) {
+    input::placeholder {
+        font-size: 16px;
     }
+}
+
+input:not(input[type="button"]) {
+    color: white;
+}
+
+._back:hover {
+    cursor: pointer;
 }
