--- a/assets/public/auth.css
+++ b/assets/public/auth.css
@@ -1,3 +1,7 @@
+/*
+html {
+    background-color: rgb(34, 39, 46);
+}*/
 input:not(input[type="button"]) {
     background-color: transparent;
 }
@@ -24,12 +28,13 @@ input:not(input[type="button"]) {
 
 ._back:hover {
     cursor: pointer;
+    color: #257953 !important;
 }
 
 ._content {
     position: absolute;
     width: 100%;
-    max-width: 960px;
+    max-width: 640px;
     min-height: 400px;
     top: 50%;
     left: 50%;
