--- a/view/top.html
+++ b/view/top.html
@@ -6,11 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotem</title>
-    <link rel="stylesheet" href="assets/public/bulma.css">
+    <link rel="stylesheet" href="../view/css/bulma.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
-    <link rel="stylesheet" href="assets/public/index.css">
+    <link rel="stylesheet" href="../view/css/index.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="assets/public/index.js"></script>
     <link rel="manifest" href="manifest.json">
 </head>
 
@@ -21,7 +20,7 @@
                 <p class="is-size-1 has-text-warning-light">Spotem</p>
                 <p class="is-size-5">観光SNS</p>
                 <div class="buttons mt-4">
-                    <a href="s1.php" class="button is-rounded is-success is-fullwidth">アカウント作成</a>
+                    <a href="/signup" class="button is-rounded is-success is-fullwidth">アカウント作成</a>
                     <!--ゲスト-->
                     <a href="login.html" class="button is-rounded is-warning is-fullwidth">ログイン</a>
                 </div>
